Look for both witnesses of a refusal, and give one up where it is read
An alternative is a conjunction of its sides, so one refused at a block
and refused about blocks together is refused both ways. Asked as two
questions in a row, the second was reached only where the first found
nothing, and what a reader was handed was whichever of the two the walk
happened to ask about first. Where the only empty side was one position,
the first question also answered with nothing to name and took the
relation's witness with it.

So the two are asked of one entry that asks both, and what it is handed
are the questions rather than their answers: what walks the blocks is
the entry, and what the relation is read by is written over the relation
alone and has no side of the alternative to be conditional on.

Which leaves what a holder keeps as a second question. A lone position
left no value is what a reading answers per position, so a reading takes
its own proof less that; a reader asking what a declaration comes to
against the ranges is naming a place its own rules did not refuse, and
keeps it. Given up on the way in, an alternative left nothing at one
position would come back refused by nothing at all.

Refusal is closed to the makers named on it, since a refusal handed both
halves directly is one whose halves nothing looked for together. Its
hash is finished where it is worked out, which the given one was exempt
from being asked; a relation carries whether some pair's ends are one
block, worked out where its pairs are taken in, so that a proof asking
what it shows costs a reader nothing where it shows nothing.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>