@@ -1,9 +1,11 @@
 package souther.compiler.values;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.function.Predicate;
 
 /**
  * Where a reading was left nothing, and what kind of lack it is.
@@ -28,27 +30,69 @@ import java.util.function.Function;
  * showed ({@link #shownByBoth}), so the first is a union of each half and the second a meet of
  * each — and how the sides were bracketed is not something either can answer from.
  *
- * <p>What a report writes is one sentence, and which one is asked of the whole refusal
- * ({@link #nearest}) rather than settled by which half a fold left standing.
+ * <p><b>Every witness, and what a reader keeps of them is that reader's question.</b> What is built
+ * here is what refused an alternative, all of it: a proof that stopped at one kind because it had
+ * found the other is a proof whose content is the order its questions were asked in. Reading it
+ * back is where witnesses are given up — {@link #nearest} for the one sentence a report writes,
+ * {@link #withoutWhatAPositionAnswers} for the ones a reading is the place to keep. Neither of them
+ * is done on the way in.
+ *
+ * <p>Closed, so that the values here are the ones its makers reach. A refusal handed both halves
+ * directly is one whose two halves nothing looked for together, which is what this type exists to
+ * rule out; every way in is named below and every one of them is exhaustive.
  *
  * @param <A> what a position is called
- * @param atEachOf the blocks each of which is left nothing, which may be none of them
- * @param together what no assignment to some blocks satisfies, which may be nothing
  */
-public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
+public final class Refusal<A> {
 
-    public Refusal {
-        atEachOf = Collections.unmodifiableSet(new LinkedHashSet<>(atEachOf));
+    /** Neither half, which is what a reading refused by nothing anything can name was refused by —
+     *  see {@link #nowhere()}. */
+    private static final Refusal<?> NOWHERE = new Refusal<>(new Parts<>(Set.of(), Lacks.none()));
+
+    private final Parts<A> parts;
+
+    /**
+     * What a refusal holds, so that two of them are one where these are.
+     *
+     * @param atEachOf the blocks each of which is left nothing, which may be none of them
+     * @param together what no assignment to some blocks satisfies, which may be nothing
+     */
+    private record Parts<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
+
+        Parts {
+            atEachOf = Collections.unmodifiableSet(new LinkedHashSet<>(atEachOf));
+        }
+
+        /** What they hold, written in one order — see {@link InOneOrder}. */
+        @Override
+        public String toString() {
+            return InOneOrder.of(atEachOf) + together;
+        }
+    }
+
+    private Refusal(Parts<A> parts) {
+        this.parts = parts;
+    }
+
+    /** The blocks each of which is left nothing, which may be none of them. */
+    public Set<Sameness.Block<A>> atEachOf() {
+        return parts.atEachOf();
+    }
+
+    /** What no assignment to some blocks satisfies, which may be nothing. */
+    public Lacks<A> together() {
+        return parts.together();
     }
 
     /** Nowhere in particular, which is where a lack no block is answerable for is. */
+    @SuppressWarnings("unchecked")
     public static <A> Refusal<A> nowhere() {
-        return new Refusal<>(Set.of(), Lacks.none());
+        return (Refusal<A>) NOWHERE;
     }
 
     /** A lack at each of {@code blocks}, which is nowhere where they are none. */
     public static <A> Refusal<A> atEachOf(Set<Sameness.Block<A>> blocks) {
-        return new Refusal<>(blocks, Lacks.none());
+        return blocks.isEmpty() ? nowhere() : new Refusal<>(new Parts<>(blocks, Lacks.none()));
     }
 
     /**
@@ -62,7 +106,54 @@ public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
      * once and the relation says nothing about which of them to carry.
      */
     public static <A> Refusal<A> ofThemTogether(Lacks<A> lacks) {
-        return new Refusal<>(Set.of(), lacks);
+        return lacks.isEmpty() ? nowhere() : new Refusal<>(new Parts<>(Set.of(), lacks));
+    }
+
+    /**
+     * Everything that refused one alternative, both kinds of witness looked for.
+     *
+     * <p>The two questions and not the two answers. A caller handing over a set of blocks and a
+     * set of lacks has already decided which of them to look for, and the thing it had to decide
+     * with is the other one — so the refusal it builds names whichever of its witnesses its author
+     * asked about first, and an alternative refused both ways comes back saying one. Asked here,
+     * neither question can be put to the other: what walks the blocks is this, and what
+     * {@code relating} is written over is the relation alone.
+     *
+     * <p>Both, whatever either says. A relation is read where a side of the alternative was left
+     * nothing, and a side is read where the relation refuses everything — an alternative refused
+     * both ways is refused both ways, and the reason it is refused twice over is not a reason to
+     * write down one of them.
+     *
+     * <p><b>Every block a witness, this being what refused the alternative and not what the
+     * reading keeps of it.</b> A block of one position left nothing is a lack somewhere, and
+     * whether it is a lack anything but that position is answerable for is a question about who is
+     * holding the proof — {@link #withoutWhatAPositionAnswers} is where a reading asks it. Dropped
+     * here, an alternative whose only empty side is one position would be refused by nothing at
+     * all, and a reader that took this for the answer would have it standing.
+     *
+     * @param blocks every block the alternative is a product over
+     * @param refusedAt whether the alternative is left nothing at one of them, which is what the
+     *                  block holds met with whatever the reader asking is holding it against
+     * @param relating what the denials between them show, asked whatever the blocks answered
+     */
+    public static <A> Refusal<A> ofAnAlternative(Collection<Sameness.Block<A>> blocks,
+                                                 Predicate<Sameness.Block<A>> refusedAt,
+                                                 WhatARelationShows<A> relating) {
+        Set<Sameness.Block<A>> atEachOf = null;
+        for (Sameness.Block<A> block : blocks) {
+            if (refusedAt.test(block)) {
+                if (atEachOf == null) {
+                    atEachOf = new LinkedHashSet<>();
+                }
+                atEachOf.add(block);
+            }
+        }
+        Lacks<A> together = relating.shows();
+        if (atEachOf == null && together.isEmpty()) {
+            return nowhere();
+        }
+        return new Refusal<>(
+                new Parts<>(atEachOf == null ? Set.of() : atEachOf, together));
     }
 
     /**
@@ -76,17 +167,52 @@ public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
      * compared by is the claim, which is what {@link #shownByBoth} asks and this does not.
      */
     public Set<Sameness.Block<A>> blocks() {
-        if (together.isEmpty()) {
-            return atEachOf;
+        if (together().isEmpty()) {
+            return atEachOf();
         }
-        Set<Sameness.Block<A>> out = new LinkedHashSet<>(atEachOf);
-        out.addAll(together.blocks());
+        Set<Sameness.Block<A>> out = new LinkedHashSet<>(atEachOf());
+        out.addAll(together().blocks());
         return Collections.unmodifiableSet(out);
     }
 
     /** Whether nothing here names a place. */
     public boolean isNowhere() {
-        return atEachOf.isEmpty() && together.isEmpty();
+        return atEachOf().isEmpty() && together().isEmpty();
+    }
+
+    /**
+     * The same refusal less what a position's own rules already answer.
+     *
+     * <p>What a reading may keep as its own proof. A lone position left no value is what
+     * {@link AdmissibleValues#perPosition} answers, and a reading holding a second account of it
+     * would be saying one thing twice — so a block of one position is not a witness the reading
+     * is the place to name. What is new is a lack no position has on its own: the rules hold
+     * several positions as one value and leave that value nothing, while each of them on its own
+     * is left something.
+     *
+     * <p><b>Asked here and not where the proof was built.</b> Which witnesses a holder may keep is
+     * a question about the holder, and the alternative was refused by everything that refused it
+     * whoever goes on to read it. Answered while the proof was being put together, an alternative
+     * left nothing at one position would come back refused by nothing, and whether it stands would
+     * turn on which holder was going to be handed the answer.
+     *
+     * <p>The lack about blocks together is kept whatever it names. Such a lack carries no rule
+     * that a block holds nothing, and names blocks of one position wherever the rules relate two
+     * positions nothing else holds as one — each is left values of its own, so it is not a second
+     * account of what a position's own rules say.
+     */
+    public Refusal<A> withoutWhatAPositionAnswers() {
+        Set<Sameness.Block<A>> out = new LinkedHashSet<>();
+        for (Sameness.Block<A> block : atEachOf()) {
+            if (!block.isOne()) {
+                out.add(block);
+            }
+        }
+        if (out.size() == atEachOf().size()) {
+            return this;
+        }
+        return out.isEmpty() && together().isEmpty()
+                ? nowhere() : new Refusal<>(new Parts<>(out, together()));
     }
 
     /**
@@ -102,10 +228,10 @@ public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
      * sentence.
      */
     public Nearest nearest() {
-        if (!atEachOf.isEmpty()) {
+        if (!atEachOf().isEmpty()) {
             return Nearest.AT_EACH_OF;
         }
-        return together.isEmpty() ? Nearest.NOWHERE : Nearest.OF_THEM_TOGETHER;
+        return together().isEmpty() ? Nearest.NOWHERE : Nearest.OF_THEM_TOGETHER;
     }
 
     /** Which of the things a refusal holds a report is about. */
@@ -124,8 +250,8 @@ public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
     /** The same lack about the blocks {@code naming} calls these. */
     public <B> Refusal<B> renamed(Function<A, B> naming) {
         Set<Sameness.Block<B>> out = new LinkedHashSet<>();
-        atEachOf.forEach(block -> out.add(block.renamed(naming)));
-        return new Refusal<>(out, together.renamed(naming));
+        atEachOf().forEach(block -> out.add(block.renamed(naming)));
+        return new Refusal<>(new Parts<>(out, together().renamed(naming)));
     }
 
     /**
@@ -142,9 +268,9 @@ public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
      * ways, which is why neither half is given up here.
      */
     public static <A> Refusal<A> eitherShown(Refusal<A> one, Refusal<A> other) {
-        Set<Sameness.Block<A>> both = new LinkedHashSet<>(one.atEachOf);
-        both.addAll(other.atEachOf);
-        return new Refusal<>(both, one.together.and(other.together));
+        Set<Sameness.Block<A>> both = new LinkedHashSet<>(one.atEachOf());
+        both.addAll(other.atEachOf());
+        return new Refusal<>(new Parts<>(both, one.together().and(other.together())));
     }
 
     /**
@@ -169,14 +295,28 @@ public record Refusal<A>(Set<Sameness.Block<A>> atEachOf, Lacks<A> together) {
      * different values, and what they showed in common is this question rather than that one.
      */
     public static <A> Refusal<A> shownByBoth(Refusal<A> one, Refusal<A> other) {
-        Set<Sameness.Block<A>> both = new LinkedHashSet<>(one.atEachOf);
-        both.retainAll(other.atEachOf);
-        return new Refusal<>(both, one.together.sharedWith(other.together));
+        Set<Sameness.Block<A>> both = new LinkedHashSet<>(one.atEachOf());
+        both.retainAll(other.atEachOf());
+        return new Refusal<>(new Parts<>(both, one.together().sharedWith(other.together())));
+    }
+
+    /** The same halves, which is what a refusal is. */
+    @Override
+    public boolean equals(Object said) {
+        return said instanceof Refusal<?> it && parts.equals(it.parts);
+    }
+
+    /** Its two halves, each in its own place and the number finished here — see {@link ValueHash}.
+     *  A refusal is carried inside values that sum what they hold, so a number handed up as
+     *  gathered would leave the two halves separable again there. */
+    @Override
+    public int hashCode() {
+        return ValueHash.ofItsParts(Refusal.class, atEachOf().hashCode(), together().hashCode());
     }
 
     /** What it holds, written in one order — see {@link InOneOrder}. */
     @Override
     public String toString() {
-        return "Refusal" + InOneOrder.of(atEachOf) + together;
+        return "Refusal" + parts;
     }
 }
